--- a/alert/backends/alert_ios/project/Build.xml
+++ b/alert/backends/alert_ios/project/Build.xml
@@ -1,26 +1,27 @@
 <xml>
 
 	<include name="${HXCPP}/build-tool/BuildCommon.xml"/>
-	
+
 	<files id="src">
 
         <include name="${haxelib:duell_duellbuildios}/native/native.xml" />
 
+		<!-- Our external interface that will contain the native code for the alert popup -->
 		<file name="src/ExternalInterface.mm"/>
-		
+
 	</files>
-	
-	<target id="NDLL" output="${LIBPREFIX}sample_ios${DBG}${LIBEXTRA}" tool="linker" toolid="${STD_MODULE_LINK}">
-		
+
+	<target id="NDLL" output="${LIBPREFIX}alert_ios${DBG}${LIBEXTRA}" tool="linker" toolid="${STD_MODULE_LINK}">
+
 		<outdir name="../ndll/${BINDIR}"/>
 		<files id="src"/>
-		
+
 	</target>
-	
+
 	<target id="default">
-		
+
 		<target id="NDLL"/>
-		
+
 	</target>
-	
+
 </xml>
